# gicsdom

./: .gitignore  Cargo.toml  KPP_field_sampler.csv  build.rs  guide_stars.rs.csv  r0_15mn.csv  wrapper.hpp
benches/: ceo_benchmark.rs
ceo/: Cargo.toml  build.rs  wrapper.hpp
ceo/benches/: ceo_benchmark.rs
ceo/examples/: atmosphere.rs  glao.rs  sh48.rs  tomography.rs  tomography_pol.rs
ceo/src/: analytic.rs  atmosphere.rs  bindings.rs  calibrations.rs  centroiding.rs  cu.rs  fielddelaunay21.pkl  fwhm.rs  gmt.rs  imaging.rs  lib.rs  lmmse.rs  pssn.rs  shackhartmann.rs  source.rs
cfd/: CFD_CASES.yaml  Cargo.toml
cfd/examples/: glao.rs
cfd/src/: dome_seeing.rs  lib.rs
cirrus/: Cargo.toml
cirrus/examples/: cmp_buckets.rs  dome_seeing_summary.rs  glao_dome_seeing_summary.rs  invoke_opd769.rs  list_bucket.rs  load_objects.rs
cirrus/src/: lib.rs
docker/: Dockerfile  Makefile
glao/: Cargo.toml
glao/src/: glao_sys.rs  lib.rs  main.rs  system.rs
src/: astrotools.rs  bindings.rs  ceo.rs  domeseeing.rs  lib.rs  main.rs  optics_path_gsh48.rs  optics_path_sh48.rs
src/agws/: mod.rs
src/ceo/: atmosphere.rs  bindings.rs  calibrations.rs  centroiding.rs  gmt.rs  imaging.rs  mod.rs  shackhartmann.rs  source.rs
