[package]
name = "gicsdom"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ndarray = { version = "0.13", features = ["blas"] }
blas-src = { version = "0.4", default-features = false, features = ["netlib"] }
ndarray-linalg = { version = "0.12", features = ["netlib"] }
indicatif = { version= "0.14" }
crossbeam-utils = {version="0.7.2"}
crossbeam-channel = {version="0.4"}
hifitime = "1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
bindgen = "0.52.0"

