[package]
name = "gicsdom"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ndarray = { version = "0.13", features = ["blas"] }
blas-src = { version = "0.4", default-features = false, features = ["netlib"] }
ndarray-linalg = { version = "0.12", features = ["netlib"] }
ndarray-npy = { version = "0.5"}
indicatif = { version= "0.14" }
crossbeam-utils = {version="0.7.2"}
crossbeam-channel = {version="0.4"}
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde-pickle = "0.6"
console = {version="0.9.2"}
serde_json = "1.0"
serde_yaml = "0.8.13"
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
s3-sync = "0.1.0"
ensure = "0.3.1"
termion = "1.5.5"
rayon = "1.3.0"
#accel = "=0.3.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ceo_benchmark"
harness = false

[build-dependencies]
bindgen = "0.52.0"

