[package]
name = "ceo"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1", features = ["derive"] }
libm = "0.2.1"
roots = "0.0.6"

[build-dependencies]
bindgen = "0.52.0"