[package]
name = "ceo"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde-pickle = "0.6"
libm = "0.2.1"
roots = "0.0.6"
rayon = "1.4"
log = "0.4.11"
nalgebra = "0.23.1"

[build-dependencies]
bindgen = "0.52.0"

[dev-dependencies]
simple_logger = "1.11.0"
criterion = "0.3"

[[bench]]
name = "ceo_benchmark"
harness = false
