[package]
name = "cfd"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceo = { path = "../ceo" }
cirrus = { path = "../cirrus" }
serde_yaml = "0.8.13"
serde = "^1.0"
