[package]
name = "cfd"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceo = { path = "../ceo" }
cirrus = { path = "../cirrus" }
tokio = "0.2.22"
serde_yaml = "0.8.13"
serde = "^1.0"
indicatif = "0.15.0"
serde-pickle = "0.6.2"
rayon = "1.5.0"
