[package]
name = "glao"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceo = { path = "../ceo" }
serde = "^1.0"
serde-pickle = "0.6"
rayon = "1.4"
csv = "1.1.3"
